package com.company;

public class Main {

    public static void main(String[] args) {
    Game game = new Game();
    //System.out.println(game.players.get(0).getAccount().getBalance());
        System.out.println(game.players.get(0).getName());
        System.out.println(game.players.get(0).getBalance());
        System.out.println(game.players);
        //System.out.println(game.players.get(0).getAccount().getBalance());
    }
}
